# discord-lastfm

./: .gitignore  Cargo.toml  README.md
src/: args.rs  main.rs
