[package]
name = "last_fm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.27.0", features = ["full","macros", "rt-multi-thread"] } # for our async runtime
futures = "0.3.28" # for our async / await blocks
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tungstenite = {version = "0.18.0", default-features = false }
tokio-util = {version = "0.7.7"}




# 